--- a/src/app/shared/titulo-funcionalidade/titulo-funcionalidade.component.scss
+++ b/src/app/shared/titulo-funcionalidade/titulo-funcionalidade.component.scss
@@ -1,4 +1,8 @@
 .titulo-funcionalidade {
-  padding-top: 20px;
-  padding-bottom: 30px;
+  padding-top: 10px;
+  padding-bottom: 20px;
+}
+
+.subtitulo-funcionalidade {
+  padding-bottom: 10px;
 }
