--- a/src/app/errors/not-found/not-found.component.html
+++ b/src/app/errors/not-found/not-found.component.html
@@ -1,1 +1,3 @@
-<p>404 - Page not found</p>
+<div align="center">
+  <img class="img-fluid d-none d-sm-block" src="/assets/img/not_found.jpg" width="500" height="350" alt="404" />
+</div>
