--- a/src/app/poderes/poder-edit/poder-edit.component.html
+++ b/src/app/poderes/poder-edit/poder-edit.component.html
@@ -1,1 +1,3 @@
-<p>poder-edit works!</p>
+<app-poder-modal titulo="Editar Poder" tituloBotao="Editar" [poder]="poder" (buttonClicked)="editaPoder($event)"
+  btnModalColor="btn btn-outline-info mr-md-3">
+</app-poder-modal>
