--- a/src/app/poderes/poder-list/poder-list.component.html
+++ b/src/app/poderes/poder-list/poder-list.component.html
@@ -1,23 +1,42 @@
-<app-shared-estrutura-funcionalidade titulo="Poderes" [tabelaHead]="['#', 'Descrição', '']">
+<app-shared-estrutura-funcionalidade titulo="Poderes"
+  subtitulo="Este módulo serve para realizar as operações pertinentes ao cadastro de Poderes. Para cadastrar um novo Poder, clique no botão abaixo.">
 
-  <tr *ngIf="!poderes.length" slot="tabela-conteudo">
-    <td colspan="3">
-      <app-shared-no-content msg="Desculpe. Nenhum poder encontrado"></app-shared-no-content>
-    </td>
-  </tr>
-
-  <tr *ngFor="let poder of poderes" slot="tabela-conteudo">
-    <th scope="row">{{poder.id}}</th>
-    <td>{{poder.descricao}}</td>
-    <td>
-      <div class="justify-content-between ">
-        <button type="button" class="btn btn-outline-info mr-md-3">
-          Editar
-        </button>
-        <button type="button" class="btn btn-outline-danger mr-md-3" data-toggle="modal" data-target="#exampleModal">
-          Remover
-        </button>
+  <div slot="tabela-conteudo">
+    <div class="row">
+      <div class="col-lg">
+        <app-poder-add (saved)="listaPoderes()"></app-poder-add>
       </div>
-    </td>
-  </tr>
+    </div>
+
+    <div class="row">
+      <div class="col-lg">
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col" *ngFor="let head of ['#', 'Descrição', '']">{{head}}</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngIf="!poderes.length">
+              <td colspan="3">
+                <app-shared-no-content msg="Desculpe. Nenhum poder encontrado"></app-shared-no-content>
+              </td>
+            </tr>
+
+            <tr *ngFor="let poder of poderes">
+              <th scope="row">{{poder.id}}</th>
+              <td>{{poder.descricao}}</td>
+              <td>
+                <div class="justify-content-between ">
+                  <app-poder-edit [poder]="poder" (edited)="listaPoderes()"></app-poder-edit>
+                  <app-poder-remove [poder]="poder" (removed)="listaPoderes()"></app-poder-remove>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
 </app-shared-estrutura-funcionalidade>
