--- a/src/app/shared/titulo-funcionalidade/titulo-funcionalidade.component.html
+++ b/src/app/shared/titulo-funcionalidade/titulo-funcionalidade.component.html
@@ -1,3 +1,6 @@
 <div class="row titulo-funcionalidade">
   <h1 class="display-5">{{titulo}}</h1>
 </div>
+<div class="row subtitulo-funcionalidade">
+  <p>{{subtitulo}}</p>
+</div>
