Desenvolvimento CRUD Herois

--- a/src/app/herois/heroi-edit/heroi-edit.component.html
+++ b/src/app/herois/heroi-edit/heroi-edit.component.html
@@ -1,1 +1,3 @@
-<p>heroi-edit works!</p>
+<app-heroi-modal titulo="Editar Herói" tituloBotao="Editar" [heroi]="heroi" (buttonClicked)="editaHeroi($event)"
+  btnModalColor="card-link btn btn-outline-secondary btn-sm mr-md-3">
+</app-heroi-modal>
