Ajuste final CRUD Heroi

--- a/src/app/login/login-form/login-form.component.html
+++ b/src/app/login/login-form/login-form.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container login-form">
 
   <div class="wrapper fadeInDown" align="center">
     <br /><br />
@@ -8,7 +8,7 @@
 
 
         <div class="fadeIn titulo">
-          <label class="titulo">Herois</label>
+          <img src="/assets/img/heroi_logo.jpg" width="50" height="50">
         </div>
 
         <br />
