--- a/src/app/universos/universo-list/universo-list.component.html
+++ b/src/app/universos/universo-list/universo-list.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <app-shared-estrutura-funcionalidade titulo="Universos"
   subtitulo="Este módulo serve para realizar as operações pertinentes a manutenção de Universos.">
 
