--- a/src/app/errors/access-denied/access-denied.component.html
+++ b/src/app/errors/access-denied/access-denied.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div align="center">
   <img class="img-fluid d-none d-sm-block" src="/assets/img/access_denied.jpg" width="500" height="350" alt="404" />
 </div>
