--- a/src/app/errors/not-found/not-found.component.html
+++ b/src/app/errors/not-found/not-found.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div align="center">
   <img class="img-fluid d-none d-sm-block" src="/assets/img/not_found.jpg" width="500" height="350" alt="404" />
 </div>
