--- a/src/app/herois/heroi-list/heroi-list.component.html
+++ b/src/app/herois/heroi-list/heroi-list.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <app-shared-estrutura-funcionalidade titulo="Heróis"
   subtitulo="Este módulo serve para realizar as operações pertinentes ao cadastro de Heróis. Para cadastrar um novo Heróis, clique no botão abaixo.">
 
