--- a/src/app/poderes/poder-list/poder-list.component.html
+++ b/src/app/poderes/poder-list/poder-list.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <app-shared-estrutura-funcionalidade titulo="Poderes"
   subtitulo="Este módulo serve para realizar as operações pertinentes ao cadastro de Poderes. Para cadastrar um novo Poder, clique no botão abaixo.">
 
