--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-  <a class="navbar-brand" routerLink="/home">MS Herois</a>
+<nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
+  <a class="navbar-brand" [routerLink]="['/home']">MS Herois</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -8,14 +8,17 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/herois">Herois</a>
+        <a class="nav-link" [routerLink]="['/herois']">Herois</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/poderes">Poderes</a>
+        <a class="nav-link" [routerLink]="['/poderes']">Poderes</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/universos">Universos</a>
+        <a class="nav-link" [routerLink]="['/universos']">Universos</a>
       </li>
     </ul>
+  </div>
+  <div class="form-inline">
+    <button class="btn btn-secondary btn-sm my-2 my-sm-0" type="button" (click)="logout()">Sair</button>
   </div>
 </nav>
